objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CSCAP__Approval_PIN__c</fullName>
        <label>Approval PIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>EMEA_SOW_Tele2_001:</description>
        <label>Contact Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative/Back-office</fullName>
                </value>
                <value>
                    <fullName>Building Contact</fullName>
                </value>
                <value>
                    <fullName>Business Customer Support</fullName>
                </value>
                <value>
                    <fullName>CEO (MD/VD)</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Decision maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Initiator</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Planjob</fullName>
                </value>
                <value>
                    <fullName>Purchaser</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Technical Contact</fullName>
                </value>
                <value>
                    <fullName>User/Consumer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Telefoniansvarig</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Bypass_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to avoid duplicate rule on process builder update.</description>
        <label>UPC Bypass Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_DPhone__c</fullName>
        <description>Created by Nexell and used as intermediary before populating the standard contact phone.</description>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UPC_English_Salutation__c</fullName>
        <formula>IF(ISPICKVAL(UPC_Gender__c, &apos;F&apos;), $CustomMetadata.UPC_General_Document_Values__mdt.UPC_English_Language_Settings.UPC_Salutation_Female__c , $CustomMetadata.UPC_General_Document_Values__mdt.UPC_English_Language_Settings.UPC_Salutation_Male__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>English Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_French_Salutation__c</fullName>
        <description>The salutation to use in documents to this contact in French</description>
        <formula>IF(ISPICKVAL(UPC_Gender__c, &apos;F&apos;), $CustomMetadata.UPC_General_Document_Values__mdt.UPC_French_Language_Settings.UPC_Salutation_Female__c , $CustomMetadata.UPC_General_Document_Values__mdt.UPC_French_Language_Settings.UPC_Salutation_Male__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The salutation to use in documents to this contact in French</inlineHelpText>
        <label>French Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Gender__c</fullName>
        <description>Field created by Nexell to control the gender. (Jochen Request).</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_German_Salutation__c</fullName>
        <description>The salutation to be used for this contact in German</description>
        <formula>IF(ISPICKVAL( UPC_Gender__c, &apos;F&apos; ), $CustomMetadata.UPC_General_Document_Values__mdt.UPC_German_Language_Settings.UPC_Salutation_Female__c , $CustomMetadata.UPC_General_Document_Values__mdt.UPC_German_Language_Settings.UPC_Salutation_Male__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The salutation to be used for this contact in German</inlineHelpText>
        <label>German Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Italian_Salutation__c</fullName>
        <description>The salutation to use for this contact in Italian documents</description>
        <formula>IF(ISPICKVAL( UPC_Gender__c, &apos;F&apos;) , $CustomMetadata.UPC_General_Document_Values__mdt.UPC_Italian_Language_Settings.UPC_Salutation_Female__c,  $CustomMetadata.UPC_General_Document_Values__mdt.UPC_Italian_Language_Settings.UPC_Salutation_Male__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The salutation to use for this contact in Italian documents</inlineHelpText>
        <label>Italian Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Taifun_Reconciliation__c</fullName>
        <label>Last Taifun Reconciliation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Preferred_Language__c</fullName>
        <description>Field Created by NExell to control the preferred language.</description>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Synced_Taifun_Contact__c</fullName>
        <label>Taifun Contact	Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Nexell. Lookup field to the corresponding user.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscrm__Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The address of this Contact. Used for the Contact&apos;s residential or default address.</description>
        <inlineHelpText>The address of this Contact. Used for the Contact&apos;s residential or default address.</inlineHelpText>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscrm__Birth_Certificate_Authority__c</fullName>
        <description>The issuing authority for this Contact&apos;s birth certificate.</description>
        <inlineHelpText>The issuing authority for this Contact&apos;s birth certificate.</inlineHelpText>
        <label>Birth Certificate Authority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Birth_Certificate_Country__c</fullName>
        <description>The country of issue for this Contact&apos;s birth certificate. Two-letter country code.</description>
        <inlineHelpText>The country of issue for this Contact&apos;s birth certificate. Two-letter country code.</inlineHelpText>
        <label>Birth Certificate Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Birth_Certificate_Date__c</fullName>
        <description>The date of issue for this Contact&apos;s birth certificate.</description>
        <inlineHelpText>The date of issue for this Contact&apos;s birth certificate.</inlineHelpText>
        <label>Birth Certificate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscrm__Birth_Certificate_Number__c</fullName>
        <description>The ID number for this Contact&apos;s birth Certificate.</description>
        <inlineHelpText>The ID number for this Contact&apos;s birth Certificate.</inlineHelpText>
        <label>Birth Certificate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Concession_Number__c</fullName>
        <description>The reference number of the document under which this Contact is eligible for a concession.</description>
        <inlineHelpText>The reference number of the document under which this Contact is eligible for a concession.</inlineHelpText>
        <label>Concession Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Concession_Type__c</fullName>
        <description>The type of concession this Contact is eligible for.</description>
        <inlineHelpText>The type of concession this Contact is eligible for.</inlineHelpText>
        <label>Concession Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pensioner</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Carer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Concession__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this Contact is entitled to a concession (e.g. old age etc.).</description>
        <inlineHelpText>If checked, this Contact is entitled to a concession (e.g. old age etc.).</inlineHelpText>
        <label>Concession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Current_Employer_Name__c</fullName>
        <description>The name of this Contact&apos;s current Employer.</description>
        <inlineHelpText>The name of this Contact&apos;s current Employer.</inlineHelpText>
        <label>Current Employer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Current_Employer_Phone__c</fullName>
        <description>The phone number for this Contact&apos;s current employer.</description>
        <inlineHelpText>The phone number for this Contact&apos;s current employer.</inlineHelpText>
        <label>Current Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cscrm__Drivers_License_Country__c</fullName>
        <description>Country of issue for this Contact&apos;s driver&apos;s license. Two-letter country code.</description>
        <inlineHelpText>Country of issue for this Contact&apos;s driver&apos;s license. Two-letter country code.</inlineHelpText>
        <label>Driver&apos;s License Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Drivers_License_Expiry_Date__c</fullName>
        <description>Expiry date of this Contact&apos;s driver&apos;s license.</description>
        <inlineHelpText>Expiry date of this Contact&apos;s driver&apos;s license.</inlineHelpText>
        <label>Driver&apos;s License Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscrm__Drivers_License_Number__c</fullName>
        <description>The driver number on this Contact&apos;s driving license.</description>
        <inlineHelpText>The driver number on this Contact&apos;s driving license.</inlineHelpText>
        <label>Driver&apos;s License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__External_ID__c</fullName>
        <description>ID for this Contact from an external system.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID for this Contact from an external system.</inlineHelpText>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__National_Health_Card_Expiry_Date__c</fullName>
        <description>The expiry date for this Contact&apos;s national health insurance card.</description>
        <inlineHelpText>The expiry date for this Contact&apos;s national health insurance card.</inlineHelpText>
        <label>National Health Card Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscrm__National_Health_Card_Number__c</fullName>
        <description>This Contact&apos;s ID number in the national health insurance program.</description>
        <inlineHelpText>This Contact&apos;s ID number in the national health insurance program.</inlineHelpText>
        <label>National Health Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Occupation__c</fullName>
        <description>This Contact&apos;s occupation.</description>
        <inlineHelpText>This Contact&apos;s occupation.</inlineHelpText>
        <label>Occupation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Paperless_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this Contact prefers paperless billing (bill by email).</description>
        <inlineHelpText>If checked, this Contact prefers paperless billing (bill by email).</inlineHelpText>
        <label>Paperless Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Pasport_Expiry_Date__c</fullName>
        <description>Expiry date of this Contact&apos;s passport.</description>
        <inlineHelpText>Expiry date of this Contact&apos;s passport.</inlineHelpText>
        <label>Pasport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscrm__Passport_Country__c</fullName>
        <description>The country of issue for this Contact&apos;s passport. Two-letter country code.</description>
        <inlineHelpText>The country of issue for this Contact&apos;s passport. Two-letter country code.</inlineHelpText>
        <label>Passport Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Passport_Issue_Date__c</fullName>
        <description>Date of issue of this Contact&apos;s passport.</description>
        <inlineHelpText>Date of issue of this Contact&apos;s passport.</inlineHelpText>
        <label>Passport Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscrm__Passport_Number__c</fullName>
        <description>The passport number for this Contact.</description>
        <inlineHelpText>The passport number for this Contact.</inlineHelpText>
        <label>Passport Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Previous_Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The previous address of this Contact.</description>
        <inlineHelpText>The previous address of this Contact.</inlineHelpText>
        <label>Previous Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Contacts (Previous Address)</relationshipLabel>
        <relationshipName>Contacts_Previous_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscrm__Residential_Status__c</fullName>
        <description>The residential status of this Contact (owner, tenant etc).</description>
        <inlineHelpText>The residential status of this Contact (owner, tenant etc).</inlineHelpText>
        <label>Residential Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
                <value>
                    <fullName>Living with parents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Social_Security_Card_Number__c</fullName>
        <description>This Contact&apos;s ID number in the social security program.</description>
        <inlineHelpText>This Contact&apos;s ID number in the social security program.</inlineHelpText>
        <label>Social Security Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Student_Card_Authority__c</fullName>
        <description>The issuing authority of this Contact&apos;s student card.</description>
        <inlineHelpText>The issuing authority of this Contact&apos;s student card.</inlineHelpText>
        <label>Student Card Authority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Student_Card_Country__c</fullName>
        <description>The issuing country of this Contact&apos;s student card. Two letter country code.</description>
        <inlineHelpText>The issuing country of this Contact&apos;s student card. Two letter country code.</inlineHelpText>
        <label>Student Card Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Student_Card_Expiry_Date__c</fullName>
        <description>The expiry date for this Contact&apos;s student card.</description>
        <inlineHelpText>The expiry date for this Contact&apos;s student card.</inlineHelpText>
        <label>Student Card Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscrm__Student_Card_Number__c</fullName>
        <description>This Contact&apos;s student card ID number.</description>
        <inlineHelpText>This Contact&apos;s student card ID number.</inlineHelpText>
        <label>Student Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Time_at_Current_Address__c</fullName>
        <description>The time this Contact has lived at their current address.</description>
        <inlineHelpText>The time this Contact has lived at their current address.</inlineHelpText>
        <label>Time at Current Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>2-5 years</fullName>
                </value>
                <value>
                    <fullName>5+ years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Time_at_Current_Employment__c</fullName>
        <description>The time this Contact has been in their current employment.</description>
        <inlineHelpText>The time this Contact has been in their current employment.</inlineHelpText>
        <label>Time at Current Employment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>5+ years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Time_at_Previous_Address__c</fullName>
        <description>The length of time this Contact lived at their previous address.</description>
        <inlineHelpText>The length of time this Contact lived at their previous address.</inlineHelpText>
        <label>Time at Previous Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 year</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>2-3 years</fullName>
                </value>
                <value>
                    <fullName>3-4 years</fullName>
                </value>
                <value>
                    <fullName>4-5 years</fullName>
                </value>
                <value>
                    <fullName>5+ years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Time_at_Previous_Employment__c</fullName>
        <description>The time this Contact spent at their previous employment.</description>
        <inlineHelpText>The time this Contact spent at their previous employment.</inlineHelpText>
        <label>Time at Previous Employment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 year</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>2-3 years</fullName>
                </value>
                <value>
                    <fullName>3-4 years</fullName>
                </value>
                <value>
                    <fullName>4-5 years</fullName>
                </value>
                <value>
                    <fullName>5+ years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>leadScoring__Campaign_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Total_Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <formula>leadScoring__Lead_Score__c + leadScoring__Campaign_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NX_Contact_DirectPhone_Format</fullName>
        <active>true</active>
        <description>Used to control phone format.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(UPC_DPhone__c )),
OR( 
    AND( 
        NOT(BEGINS(UPC_DPhone__c ,&quot;+&quot;)), 
        NOT(BEGINS(UPC_DPhone__c ,&quot;0&quot;))), 
        (NOT (REGEX( UPC_DPhone__c , &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;)))
))</errorConditionFormula>
        <errorDisplayField>UPC_DPhone__c</errorDisplayField>
        <errorMessage>Phone numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Contact_Fax_Format</fullName>
        <active>true</active>
        <description>Used to control fax format.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Fax)),
OR( 
    AND( 
        NOT(BEGINS(Fax,&quot;+&quot;)), 
        NOT(BEGINS(Fax,&quot;0&quot;))), 
        (NOT (REGEX( Fax, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;)))
))</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Fax numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Contact_Mobile_Phone_Format</fullName>
        <active>true</active>
        <description>Used to control mobile phone format.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(MobilePhone)),
OR( 
    AND( 
        NOT(BEGINS(MobilePhone,&quot;+&quot;)), 
        NOT(BEGINS(MobilePhone,&quot;0&quot;))), 
        (NOT (REGEX( MobilePhone, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;)))
))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Contact_Phone_Format</fullName>
        <active>true</active>
        <description>Used to control phone format.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Phone)),
OR( 
    AND( 
        NOT(BEGINS(Phone,&quot;+&quot;)), 
        NOT(BEGINS(Phone,&quot;0&quot;))), 
        (NOT (REGEX( Phone, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;)))
))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Contact_Swiss_DirectPhone_Length</fullName>
        <active>true</active>
        <description>Used to Control Swiss Phone Length</description>
        <errorConditionFormula>IF( 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041.*&quot;), 
FALSE, 
NOT( 
AND( 
NOT(AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^00417.*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004171.*&quot;) 
)) 
, 
OR( 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041860.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=16 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041869.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=10, 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&lt;=17 
) 
, 
AND( 
OR( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004198.*&quot;), 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004199.*&quot;) 
), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=7 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(00412|00413|00414|00415|00416|00417|00418|00419).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(0041860|0041869).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(004198|004199).*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=13 
) 
) 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>UPC_DPhone__c</errorDisplayField>
        <errorMessage>Phone: invalid length or wrong number type. Normal phone number length is 9 digits with area code but without the leading 0. Exceptions are: 01 (3 to 6 digit), 0860 (12 digit), 0869 (6 to 13 digits). Mobile numbers are not allowed in phone field.</errorMessage>
    </validationRules>
</CustomObject>